--- a/style.css
+++ b/style.css
@@ -475,3 +475,12 @@ body, html {
   text-overflow: ellipsis;
   max-width: 70%;
 }
+.app {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
+.tide, .moon-photo, svg {
+  max-width: 100%;
+  overflow-x: hidden;
+}
