--- a/style.css
+++ b/style.css
@@ -119,8 +119,8 @@ body {
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   padding: 2rem;
   width: 100%;
-  max-width: 700px;
-  margin: 0 auto;
+  max-width: none;
+  margin: 0;
   box-sizing: border-box;
 }
 
