--- a/style.css
+++ b/style.css
@@ -449,3 +449,8 @@ svg {
   padding: 2rem;
   box-sizing: border-box;
 }
+#settings-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
