--- a/style.css
+++ b/style.css
@@ -6,19 +6,23 @@
 }
 
 html, body {
-  height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
   width: 100%;
+  max-width: 100vw;
   overflow-x: hidden;
+  box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
 }
 
 /* Utility */
 .hidden {
   display: none !important;
 }
-
+.app {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
 /* HEADER */
 .app-header {
   position: fixed;
