--- a/style.css
+++ b/style.css
@@ -784,7 +784,11 @@ svg {
   flex: 1 1 auto;
   min-height: 0;
 }
-
+@media (max-width: 480px) {
+  .card-tabs {
+    padding-top: 25px;
+  }
+}
 .tab-header {
   display: flex;
   border-bottom: 1px solid #ccc;
