--- a/style.css
+++ b/style.css
@@ -818,7 +818,7 @@ svg {
 
 @media (max-width: 480px) {
   .card-content {
-    padding-top: 60px;
+    padding-top: 4rem;
 	 padding-bottom: 2rem;
   }
 }
