--- a/style.css
+++ b/style.css
@@ -1016,3 +1016,35 @@ svg {
   font-size: 1.2 rem;
   color: #333; /* black icon */
 }
+.label {
+  display: inline-block;
+  max-width: max-content;
+  padding: 0.4em 0.75em;
+  margin: 0.3em 0.4em;
+  border-radius: 1.25em;
+  font-size: 0.85rem;
+  font-weight: 600;
+  white-space: nowrap;
+  background-color: lightgray;
+  color: black;
+  border: 1px solid gray;
+}
+
+.label-do {
+  background-color: #d4edda;
+  color: #155724;
+  border: 1px solid #c3e6cb;
+}
+
+.label-dont {
+  background-color: #f8d7da;
+  color: #721c24;
+  border: 1px solid #f5c6cb;
+}
+
+.intro-labels {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.4em;
+  margin-bottom: 0.75em;
+}
